kubernetes_layer_modules/alb_ingress_controller/generated_alb_manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/auth-on-unauthenticated-request: allow
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:016735869948:certificate/7cb13960-c7dc-4238-b809-4049f70055cf
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: sg-0c52da2e1c9d75827
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
    alb.ingress.kubernetes.io/target-group-attributes: load_balancing.algorithm.type=least_outstanding_requests,stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=600
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-southeast-1:016735869948:regional/webacl/example-sgp-main-common-waf-rules/7a3fb851-1f51-4f9c-8110-0ed3f819a223
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: canditude-dev.api.sgp. exampleexample.co
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2022-05-26T04:35:05Z"
  finalizers:
  - ingress.k8s.aws/resources
  generation: 1
  name: alb
  namespace: example_app
  resourceVersion: "1065744"
  uid: 2c060b3e-fdb4-426a-a1b8-f57d77414522
spec:
  rules:
  - host: canditude-dev.api.sgp. exampleexample.co
    http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /
        pathType: Prefix
      - backend:
          service:
            name: canditude-dev-example-api
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - canditude-dev.api.sgp. exampleexample.co
    secretName: canditude-dev-example-api-tls
status:
  loadBalancer:
    ingress:
    - hostname: k8s-example_app-alb-f28ebc33d1-314147542.ap-southeast-1.elb.amazonaws.com
